ref: use way fast OkHttpClient instead of deprecated one